Definitions up to gradient descent added.

--- a/AI_Learning_Journey_Defintions.ipynb
+++ b/AI_Learning_Journey_Defintions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOR/DkZDBVnDLwyWZnzSLec",
+      "authorship_tag": "ABX9TyN92jHsXn2f9gibhcX0pwSq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,12 +597,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "31. Principal Component Analysis (PCA)\n",
-        "Definition: A technique used to emphasize variation and bring out strong patterns in a dataset.\n",
-        "Key Components:\n",
-        "Principal Components: New variables that are linear combinations of the original variables.\n",
-        "Variance: Each principal component captures as much variance as possible.\n",
-        "Example: Visualizing high-dimensional data in 2D or 3D plots. PCA reduces the number of dimensions while retaining important information."
+        "#31. Principal Component Analysis (PCA)\n",
+        "###Definition:\n",
+        "A technique used to emphasize variation and bring out strong patterns in a dataset.\n",
+        "###Key Components:\n",
+        "* Principal Components: New variables that are linear combinations of the original variables.\n",
+        "* Variance: Each principal component captures as much variance as possible.\n",
+        "\n",
+        "### Example:\n",
+        "Visualizing high-dimensional data in 2D or 3D plots. PCA reduces the number of dimensions while retaining important information."
       ],
       "metadata": {
         "id": "Pmb4iHo_fifR"
@@ -611,12 +614,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "32. Clustering\n",
-        "Definition: A type of unsupervised learning where data is grouped based on similarity.\n",
-        "Key Components:\n",
-        "Centroids: Represent the center of each cluster.\n",
-        "Distance Metric: Measures the similarity between data points.\n",
-        "Example: Grouping customers based on purchasing behavior. The model identifies patterns and groups similar customers together."
+        "#32. Clustering\n",
+        "### Definition:\n",
+        "A type of unsupervised learning where data is grouped based on similarity.\n",
+        "### Key Components:\n",
+        "* Centroids: Represent the center of each cluster.\n",
+        "* Distance Metric: Measures the similarity between data points.\n",
+        "\n",
+        "### Example:\n",
+        "Grouping customers based on purchasing behavior. The model identifies patterns and groups similar customers together."
       ],
       "metadata": {
         "id": "S_n8kZvIfkbc"
@@ -625,12 +631,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "33. Regression\n",
-        "Definition: A type of predictive modeling technique which investigates the relationship between a dependent (target) and independent (predictor) variable.\n",
-        "Key Components:\n",
-        "Linear Regression: Models the relationship as a straight line.\n",
-        "Non-linear Regression: Models the relationship using a non-linear function.\n",
-        "Example: Predicting house prices based on various features like size, location, etc. Regression models can predict continuous values based on input features."
+        "#33. Regression\n",
+        "### Definition:\n",
+        "A type of predictive modeling technique which investigates the relationship between a dependent (target) and independent (predictor) variable.\n",
+        "### Key Components:\n",
+        "* Linear Regression: Models the relationship as a straight line.\n",
+        "* Non-linear Regression: Models the relationship using a non-linear function.\n",
+        "\n",
+        "### Example:\n",
+        "Predicting house prices based on various features like size, location, etc. Regression models can predict continuous values based on input features."
       ],
       "metadata": {
         "id": "Nyq0pqXWfmXU"
@@ -639,12 +648,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "34. Classification\n",
-        "Definition: A type of predictive modeling technique which assigns a class label to a set of observations.\n",
-        "Key Components:\n",
-        "Classes: The different categories or labels.\n",
-        "Decision Boundary: The boundary that separates different classes.\n",
-        "Example: Classifying emails as 'spam' or 'not spam'. Classification models can categorize new data points based on learned patterns."
+        "#34. Classification\n",
+        "### Definition:\n",
+        "A type of predictive modeling technique which assigns a class label to a set of observations.\n",
+        "### Key Components:\n",
+        "* Classes: The different categories or labels.\n",
+        "* Decision Boundary: The boundary that separates different classes.\n",
+        "\n",
+        "### Example:\n",
+        "Classifying emails as 'spam' or 'not spam'. Classification models can categorize new data points based on learned patterns."
       ],
       "metadata": {
         "id": "FJCiu6L_foBd"
@@ -653,12 +665,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "35. Anomaly Detection\n",
-        "Definition: Identifying rare items, events, or observations which raise suspicions by differing significantly from the majority of the data.\n",
-        "Key Components:\n",
-        "Normal Behavior: The standard pattern of data.\n",
-        "Anomalies: Data points that deviate from normal behavior.\n",
-        "Example: Fraud detection in credit card transactions. Anomaly detection models can identify unusual patterns that may indicate fraudulent activity."
+        "#35. Anomaly Detection\n",
+        "### Definition:\n",
+        "Identifying rare items, events, or observations which raise suspicions by differing significantly from the majority of the data.\n",
+        "### Key Components:\n",
+        "* Normal Behavior: The standard pattern of data.\n",
+        "* Anomalies: Data points that deviate from normal behavior.\n",
+        "\n",
+        "### Example:\n",
+        "Fraud detection in credit card transactions. Anomaly detection models can identify unusual patterns that may indicate fraudulent activity."
       ],
       "metadata": {
         "id": "XiTAWdVxfpvA"
@@ -667,13 +682,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "36. Bayesian Networks\n",
-        "Definition: A probabilistic graphical model that represents a set of variables and their conditional dependencies.\n",
-        "Key Components:\n",
-        "Nodes: Represent variables.\n",
-        "Edges: Represent conditional dependencies.\n",
-        "Inference: Calculating the probability of a variable given the known values of other variables.\n",
-        "Example: Risk prediction models in healthcare. Bayesian networks can model the relationships between different risk factors and predict the likelihood of a disease."
+        "#36. Bayesian Networks\n",
+        "### Definition:\n",
+        "A probabilistic graphical model that represents a set of variables and their conditional dependencies.\n",
+        "### Key Components:\n",
+        "* Nodes: Represent variables.\n",
+        "* Edges: Represent conditional dependencies.\n",
+        "* Inference: Calculating the probability of a variable given the known values of other variables.\n",
+        "\n",
+        "### Example:\n",
+        "Risk prediction models in healthcare. Bayesian networks can model the relationships between different risk factors and predict the likelihood of a disease."
       ],
       "metadata": {
         "id": "8rZiDgfjfrhT"
@@ -682,12 +700,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "37. Markov Chains\n",
-        "Definition: A stochastic process that transitions from one state to another on a state space.\n",
-        "Key Components:\n",
-        "States: Possible conditions or situations.\n",
-        "Transition Probabilities: The likelihood of moving from one state to another.\n",
-        "Example: Predicting weather conditions based on previous day’s weather. Markov chains can model sequences of events where the probability of each event depends only on the state attained in the previous event."
+        "#37. Markov Chains\n",
+        "### Definition:\n",
+        "A stochastic process that transitions from one state to another on a state space.\n",
+        "### Key Components:\n",
+        "* States: Possible conditions or situations.\n",
+        "* Transition Probabilities: The likelihood of moving from one state to another.\n",
+        "\n",
+        "### Example:\n",
+        "Predicting weather conditions based on previous day’s weather. Markov chains can model sequences of events where the probability of each event depends only on the state attained in the previous event."
       ],
       "metadata": {
         "id": "gLhLY5kkftcB"
@@ -696,13 +717,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "38. Q-Learning\n",
-        "Definition: A reinforcement learning algorithm that aims to learn the value of an action in a particular state.\n",
-        "Key Components:\n",
-        "Q-Values: Represent the value of taking a particular action in a given state.\n",
-        "Policy: The strategy used by the agent to determine actions based on Q-values.\n",
+        "#38. Q-Learning\n",
+        "### Definition:\n",
+        "A reinforcement learning algorithm that aims to learn the value of an action in a particular state.\n",
+        "### Key Components:\n",
+        "* Q-Values: Represent the value of taking a particular action in a given state.\n",
+        "* Policy: The strategy used by the agent to determine actions based on Q-values.\n",
         "\n",
-        "Example: Training a robot to navigate a maze by learning the best actions to take at each step. Q-learning helps the robot learn the optimal path by maximizing the cumulative reward."
+        "### Example:\n",
+        "Training a robot to navigate a maze by learning the best actions to take at each step. Q-learning helps the robot learn the optimal path by maximizing the cumulative reward."
       ],
       "metadata": {
         "id": "lvItVk7sfvTO"
@@ -711,16 +734,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "39. Perceptron\n",
-        "Definition: The simplest type of artificial neural network, consisting of a single layer of weights.\n",
-        "Key Components:\n",
-        "Inputs: Features of the data.\n",
+        "# 39. Perceptron\n",
+        "### Definition:\n",
+        "The simplest type of artificial neural network, consisting of a single layer of weights.\n",
+        "### Key Components:\n",
+        "* Inputs: Features of the data.\n",
         "Weights: Parameters that are adjusted during training.\n",
-        "Activation Function: Determines the output based on the weighted sum of inputs.\n",
-        "Example: A binary classifier used to predict whether an email is spam or not spam. The perceptron learns to classify inputs based on their features."
+        "* Activation Function: Determines the output based on the weighted sum of inputs.\n",
+        "\n",
+        "### Example:\n",
+        "A binary classifier used to predict whether an email is spam or not spam. The perceptron learns to classify inputs based on their features."
       ],
       "metadata": {
         "id": "XlkVJb1Gf0MQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#40. Gradient Descent\n",
+        "### Definition:\n",
+        "An optimization algorithm used to minimize the loss function by iteratively moving in the direction of steepest descent.\n",
+        "### Key Components:\n",
+        "* Learning Rate: Controls the step size during each iteration.\n",
+        "* Loss Function: A measure of how well the model's predictions match the actual data.\n",
+        "\n",
+        "### Example:\n",
+        "Training neural networks by adjusting weights to minimize prediction error. Gradient descent updates the model parameters to reduce the loss function."
+      ],
+      "metadata": {
+        "id": "jk7LEeztm5e1"
       }
     },
     {
